feature_driver_chat: UI fixes

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/background_white_more_rounded_black_bordered.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/background_white_more_rounded_black_bordered.xml
@@ -2,11 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle" >
 
-    <solid android:color="@color/transparent"/>
+    <solid android:color="@color/chat__suggestion_background"/>
     <corners android:radius="32px"/>
     <stroke
         android:width="2px"
-        android:color="@color/black"
+        android:color="@color/black_text_v2"
         />
 
 </shape>
