--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
@@ -5,7 +5,8 @@
 
     <color name="white_dark">#AFAFAF</color>
     <color name="white_dark1">#EFEFEF</color>
-
+    <color name="chat_background">#eaeaea</color>
+    <color name="chat__suggestion_background">#fdfdfc</color>
 
     <color name="black">#202020</color>
     <color name="black_light">#505050</color>
