--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_signin_otp.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_signin_otp.xml
@@ -195,6 +195,7 @@
                     android:gravity="center"
                     android:hint="@string/enter_otp"
                     android:inputType="number"
+                    android:maxLength="10"
                     android:paddingLeft="20px"
                     android:paddingRight="20px"
                     android:textColor="@color/black_text_v2"
