--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
@@ -127,6 +127,7 @@
         android:layout_height="100px"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="760px"
+        android:layout_marginBottom="24px"
         android:visibility="gone"
         />
 
