--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_login.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_login.xml
@@ -44,7 +44,7 @@
                 android:background="@drawable/background_white"
                 android:hint="@string/phone_number"
                 android:inputType="number"
-                android:maxLength="13"
+                android:maxLength="10"
                 android:singleLine="true"
                 android:textColor="@color/black"
                 android:textSize="34px"/>
@@ -68,8 +68,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/register_text"
-            android:layout_marginTop="32px"
+            android:layout_marginTop="24px"
             android:textSize="26px"
+            android:padding="10px"
             android:layout_gravity="center_horizontal"
             android:textColor="@color/white"/>
 
