--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/spinner_layout.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/spinner_layout.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="5."
-        android:textColor="@color/black"
+        android:textColor="@color/black_text_v2"
         android:gravity="center_vertical"
         android:textSize="32px"
         android:padding="10px"
