feature_new_login_flow: automatic login and ui fixes

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_signin_otp.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_signin_otp.xml
@@ -189,7 +189,7 @@
                 <EditText
                     android:id="@+id/otpEt"
                     android:layout_width="410px"
-                    android:layout_height="wrap_content"
+                    android:layout_height="72px"
                     android:layout_gravity="center_horizontal"
                     android:background="#0000"
                     android:gravity="center"
