--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
@@ -234,36 +234,176 @@
             android:splitMotionEvents="false"
             android:visibility="visible">
 
-            <product.clicklabs.jugnoo.driver.utils.CustomButtonView
-                android:id="@+id/driverStartRideBtn"
-                android:layout_width="410px"
-                android:layout_height="99px"
-                android:layout_marginLeft="25px"
-                android:background="@drawable/new_orange_btn_selector_rounded"
-                android:text="@string/start_ride"
-                android:textColor="@drawable/white_color_selector"
-                android:textSize="@dimen/button_text_size"/>
+            <!--<product.clicklabs.jugnoo.driver.utils.CustomButtonView-->
+                <!--android:id="@+id/driverStartRideBtn"-->
+                <!--android:layout_width="410px"-->
+                <!--android:layout_height="99px"-->
+                <!--android:layout_marginLeft="25px"-->
+                <!--android:background="@drawable/new_orange_btn_selector_rounded"-->
+                <!--android:text="@string/start_ride"-->
+                <!--android:textColor="@drawable/white_color_selector"-->
+                <!--android:textSize="@dimen/button_text_size"/>-->
 
-            <product.clicklabs.jugnoo.driver.utils.CustomButtonView
-                android:id="@+id/buttonMarkArrived"
-                android:layout_width="410px"
-                android:layout_height="99px"
-                android:layout_marginLeft="25px"
-                android:background="@drawable/new_orange_btn_normal_rounded"
-                android:text="@string/arrived"
-                android:textColor="@drawable/white_color_selector"
-                android:textSize="@dimen/button_text_size"/>
+            <!--<product.clicklabs.jugnoo.driver.utils.CustomButtonView-->
+                <!--android:id="@+id/buttonMarkArrived"-->
+                <!--android:layout_width="410px"-->
+                <!--android:layout_height="99px"-->
+                <!--android:layout_marginLeft="25px"-->
+                <!--android:background="@drawable/new_orange_btn_normal_rounded"-->
+                <!--android:text="@string/arrived"-->
+                <!--android:textColor="@drawable/white_color_selector"-->
+                <!--android:textSize="@dimen/button_text_size"/>-->
 
-            <product.clicklabs.jugnoo.driver.utils.CustomButtonView
-                android:id="@+id/driverCancelRideBtn"
-                android:layout_width="240px"
-                android:layout_height="99px"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="15px"
-                android:background="@drawable/new_menu_black_btn_selector_rounded"
-                android:text="@string/cancel"
-                android:textColor="@drawable/white_color_selector"
-                android:textSize="32px"/>
+            <!--<product.clicklabs.jugnoo.driver.utils.CustomButtonView-->
+                <!--android:id="@+id/driverCancelRideBtn"-->
+                <!--android:layout_width="240px"-->
+                <!--android:layout_height="99px"-->
+                <!--android:layout_alignParentRight="true"-->
+                <!--android:layout_marginRight="15px"-->
+                <!--android:background="@drawable/new_menu_black_btn_selector_rounded"-->
+                <!--android:text="@string/cancel"-->
+                <!--android:textColor="@drawable/white_color_selector"-->
+                <!--android:textSize="32px"/>-->
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/cvTask"
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                card_view:cardBackgroundColor="@android:color/transparent"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                card_view:cardCornerRadius="3dp"
+                card_view:cardUseCompatPadding="true">
+
+                <LinearLayout
+                    android:id="@+id/linearLayoutDeliveryItem"
+                    android:layout_width="640px"
+                    android:layout_height="288px"
+                    android:background="@color/grey_light_delivery_tab_fill"
+                    android:orientation="vertical">
+
+                    <RelativeLayout
+                        android:id="@+id/linearLayoutDeliveryItemHeader"
+                        android:layout_width="match_parent"
+                        android:layout_height="64px"
+                        android:background="@color/white">
+
+                        <TextView
+                            android:id="@+id/textViewCustomerName"
+                            android:layout_width="448px"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="30px"
+                            android:layout_centerVertical="true"
+                            android:text="@string/NA"
+                            android:textSize="28px"
+                            android:visibility="visible"
+                            android:textColor="@color/black_text_v2"/>
+
+
+                    </RelativeLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="132px"
+                        android:orientation="horizontal"
+                        android:layout_marginTop="12px">
+
+                        <LinearLayout
+                            android:id="@+id/linearLayoutContent"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/textViewCustomerPickupAddress"
+                                android:layout_width="352px"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="30px"
+                                android:maxLines="4"
+                                android:textSize="26px"
+                                android:text="lllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll"
+                                android:textColor="@color/black_text_v2"
+                                />
+
+                        </LinearLayout>
+
+                        <RelativeLayout
+                            android:id="@+id/relativeLayoutCall"
+                            android:layout_width="200px"
+                            android:layout_height="64px"
+                            android:layout_marginLeft="25px"
+                            android:layout_marginTop="15px"
+                            android:visibility="visible"
+                            android:background="@drawable/new_orange_btn_corner_normal">
+
+                            <ImageView
+                                android:id="@+id/driverCallIcon"
+                                android:layout_width="40px"
+                                android:layout_height="40px"
+                                android:layout_centerVertical="true"
+                                android:layout_marginLeft="15px"
+                                android:src="@drawable/call_icon_selector"/>
+
+                            <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
+                                android:id="@+id/textViewCall"
+                                android:layout_width="130px"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:layout_marginLeft="85px"
+                                android:text="@string/call"
+                                android:textColor="@drawable/white_color_selector"
+                                android:textSize="42px"/>
+                        </RelativeLayout>
+
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_marginLeft="30px"
+                        android:layout_marginRight="30px"
+                        android:gravity="center">
+
+                        <product.clicklabs.jugnoo.driver.utils.CustomButtonView
+                            android:id="@+id/driverStartRideBtn"
+                            android:layout_width="270px"
+                            android:layout_height="64px"
+                            android:background="@drawable/new_orange_btn_normal_rounded"
+                            android:text="@string/start_ride"
+                            android:visibility="gone"
+                            android:textColor="@drawable/white_color_selector"
+                            android:textSize="@dimen/button_text_size"/>
+
+                        <product.clicklabs.jugnoo.driver.utils.CustomButtonView
+                            android:id="@+id/buttonMarkArrived"
+                            android:layout_width="270px"
+                            android:layout_height="64px"
+                            android:background="@drawable/new_orange_btn_normal_rounded"
+                            android:text="@string/arrived"
+                            android:visibility="visible"
+                            android:textColor="@drawable/white_color_selector"
+                            android:textSize="@dimen/button_text_size"/>
+
+
+                        <product.clicklabs.jugnoo.driver.utils.CustomButtonView
+                            android:id="@+id/driverCancelRideBtn"
+                            android:layout_width="270px"
+                            android:layout_height="64px"
+                            android:layout_marginLeft="35px"
+                            android:visibility="visible"
+                            android:background="@drawable/new_menu_black_btn_selector_rounded"
+                            android:text="@string/cancel"
+                            android:textColor="@drawable/white_color_selector"
+                            android:textSize="32px"/>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
 
 
         </RelativeLayout>
@@ -304,7 +444,7 @@
                 android:background="@color/white_translucent"
                 android:orientation="vertical"
                 android:splitMotionEvents="false"
-                android:visibility="visible"
+                android:visibility="gone"
                 >
                 <TextView
                     android:id="@+id/textViewRideInstructionsInRide"
