--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
@@ -54,6 +54,7 @@
                 android:layout_height="match_parent"
                 android:layout_centerVertical="true"
                 android:background="@color/transparent"
+                android:visibility="visible"
                 android:popupBackground="@drawable/background_white_rounded_orange_bordered"
                 android:textAlignment="center"/>
 
