--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_splash_signup.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_splash_signup.xml
@@ -326,7 +326,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="20px"
+                android:layout_marginTop="12px"
+                android:padding="24px"
                 android:text="@string/login_here"
                 android:textColor="@color/white"
                 android:textSize="@dimen/text_size_26"/>
@@ -338,7 +339,7 @@
                 android:layout_gravity="center_horizontal"
                 android:text="@string/i_accept_new"
                 android:textColor="@color/white"
-                android:layout_marginTop="220px"
+                android:layout_marginTop="200px"
                 android:layout_toRightOf="@+id/imageViewTandC"
                 android:textSize="28px"/>
 
