--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
@@ -31,7 +31,7 @@
             android:layout_marginRight="5px"
             android:layout_marginTop="25px"
             android:background="@drawable/background_translucent_white_rounded_orange_bordered"
-            android:visibility="visible">
+            android:visibility="gone">
 
             <ImageView
                 android:layout_width="wrap_content"
