--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
@@ -231,6 +231,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="15px"
+            android:layout_gravity="center_horizontal"
             android:splitMotionEvents="false"
             android:visibility="visible">
 
@@ -444,7 +445,7 @@
                 android:background="@color/white_translucent"
                 android:orientation="vertical"
                 android:splitMotionEvents="false"
-                android:visibility="gone"
+                android:visibility="visible"
                 >
                 <TextView
                     android:id="@+id/textViewRideInstructionsInRide"
