--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_customer_info.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_customer_info.xml
@@ -14,15 +14,15 @@
         android:layout_centerVertical="true"
         >
 
-        <TextView
-            android:id="@+id/textViewCustomerName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:text="@string/NA"
-            android:textColor="@color/bg_grey_opaque"
-            android:textSize="36px"
-            android:visibility="visible"/>
+        <!--<TextView-->
+            <!--android:id="@+id/textViewCustomerName"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:gravity="center_vertical"-->
+            <!--android:text="@string/NA"-->
+            <!--android:textColor="@color/bg_grey_opaque"-->
+            <!--android:textSize="36px"-->
+            <!--android:visibility="visible"/>-->
 
         <!--<TextView-->
             <!--android:id="@+id/textViewCustomerPickupAddress"-->
