--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_end.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_end.xml
@@ -7,7 +7,7 @@
     android:layout_below="@+id/topRlOuter"
     android:animateLayoutChanges="true"
     android:splitMotionEvents="false"
-    android:visibility="gone"
+    android:visibility="visible"
     >
 
 
@@ -23,6 +23,23 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             >
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="88px"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:background="@color/jet_black">
+
+                <TextView
+                    android:id="@+id/textViewRideInstructions"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/Invoice"
+                    android:textColor="@color/white"
+                    android:textSize="36px"/>
+
+            </RelativeLayout>
 
             <!-- reached distance km, time, fare layout -->
             <LinearLayout
