--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
@@ -207,8 +207,8 @@
         android:id="@+id/btnHelp"
         android:layout_width="108px"
         android:layout_height="108px"
-        android:layout_alignParentRight="true"
         android:layout_marginTop="94px"
+        android:layout_marginLeft="18px"
         android:background="@drawable/help_in_ride_icon"/>
 
 
@@ -221,6 +221,8 @@
         android:gravity="bottom"
         android:orientation="vertical"
         >
+
+
 
         <!--<TextView-->
             <!--android:id="@+id/textViewRideInstructions"-->
@@ -243,6 +245,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="15px"
+            android:layout_marginTop="24px"
             android:layout_gravity="center_horizontal"
             android:splitMotionEvents="false"
             android:visibility="visible">
@@ -772,12 +775,14 @@
         android:id="@+id/driverEngagedMyLocationBtn"
         android:layout_width="80px"
         android:layout_height="80px"
-        android:layout_above="@+id/linearLayoutStartEnd"
-        android:layout_marginBottom="20px"
-        android:layout_marginLeft="40px"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="18px"
+        android:layout_marginTop="104px"
         android:background="@drawable/new_my_loc_button"
         android:tag="mwar"
         />
+
+
 
     <!--<Button-->
         <!--android:id="@+id/distanceReset2"-->
@@ -804,5 +809,14 @@
         android:textSize="28px"
         android:visibility="visible"
         />
+
+    <Button
+        android:id="@+id/btnChatHead"
+        android:layout_width="144px"
+        android:layout_height="144px"
+        android:layout_above="@+id/linearLayoutStartEnd"
+        android:layout_marginLeft="24px"
+        android:background="@drawable/chat_icon_eng"/>
+
 
 </RelativeLayout>
