--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
@@ -50,17 +50,34 @@
                     android:layout_alignParentRight="true"
                     android:text="@string/change"/>
 
-                <Button
-                    android:id="@+id/btnCallVendor"
-                    android:background="@drawable/background_white_rounded_bordered"
-                    android:layout_width="120px"
-                    android:layout_height="45px"
-                    android:textSize="24px"
+                <RelativeLayout
+                    android:id="@+id/relativeLayoutCall1"
+                    android:layout_width="140px"
+                    android:layout_height="56px"
                     android:layout_marginRight="28px"
                     android:layout_centerVertical="true"
                     android:layout_alignParentRight="true"
                     android:visibility="gone"
-                    android:text="@string/call"/>
+                    android:background="@drawable/background_white_rounded_bordered">
+
+                    <ImageView
+                        android:id="@+id/driverCallIcon1"
+                        android:layout_width="28px"
+                        android:layout_height="28px"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="15px"
+                        android:src="@drawable/call_black_icon"/>
+
+                    <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
+                        android:id="@+id/textViewCall1"
+                        android:layout_width="110px"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="65px"
+                        android:text="@string/call"
+                        android:textColor="@color/jet_black"
+                        android:textSize="28px"/>
+                </RelativeLayout>
 
             </RelativeLayout>
 
